--- a/com.garage.web.backend/src/main/resources/templates/login/index.html
+++ b/com.garage.web.backend/src/main/resources/templates/login/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon icon -->
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon.png">
-    <title>Hệ thống quản lý hợp đồng</title>
+    <title>Hệ thống quản lý</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/adminpro/" />
     <!-- Bootstrap Core CSS -->
     <link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
